Add functions to display form and disply data captured from form

--- a/style.css
+++ b/style.css
@@ -26,3 +26,16 @@
     display: grid;
     align-content: center;
 }
+
+button {
+    border-radius: 10px;
+}
+
+#add-book {
+    display: grid;
+    grid-template-columns: .1fr 1fr;
+    gap: 10px;
+    margin: 50px;
+    align-items: center;
+    justify-content: center;
+}
